# cargo-winpath-redirect

./: Cargo.toml  README.md
src/: main.rs
