[package]
name = "cargo-winpath-redirect"
version = "0.1.0"
edition = "2024"
description = "cargo-winpath-redirect is a utility for Windows Rust developers facing issues with long file paths during the build process, particularly common with ESP-IDF projects or deeply nested project structures."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sumukhballal/cargo-winpath-redirect"


[dependencies]
fs_extra = "1"
cargo_metadata = "0.20.0"